--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 
 body{
     background-color:#448bc9;
-    background-image: url(pictures/background.jpg);
+    background-image: url(public/pictures/background.jpg);
     font-family:'Montserrat', sans-serif !important;
 }
 #titleBox{
@@ -50,16 +50,28 @@ body{
     height: 570px;
 }
 #PlayOn{
-    background-color: #FF5252;
+     background: -webkit-linear-gradient(top, #ff7272 0%, #dd1111 100%);
     width: 100px;
-    height: 80px;
+    height: 60px;
     font-size: 20px;
+    border: 3px solid #d63535;
     border-radius: 8px;
+     box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+  
 }
+
 #PlayOn:hover{
-    background-color: #FFAE52;
+     background: -webkit-linear-gradient(top, #ff7272 0%, #ba0707 100%);
     transition: 0.2s;
 }
+
+#play_text{
+    font-size: 28px;
+    font-weight: bold;
+    color:#313333;
+    text-shadow: 0px 1px #ff7c7c;
+}
+
 .p_guess{
     height: 80px;
     background-color: #ffe852;
@@ -77,7 +89,7 @@ body{
     height: 60px;
     width: 60px;
     background-color: white;
-    border-radius: 8px;
+    border-radius: 10px;
     float: left;
     margin-left: 5px;
     margin-right: 10px;
@@ -132,29 +144,49 @@ p{
   display: inline;
 }
 .yes_button{
-    background-color: #83FF52;
+    background: -webkit-linear-gradient(top, #2def5a 0%, #227f35 100%);
+    border: 3px solid #0b9128;
     width: 150px;
     height: 50px;
     font-size: 30px;
     border-radius: 8px;
     margin-right: 20px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 .yes_button:hover{
-    background-color: #4dff07;
+     background: -webkit-linear-gradient(top, #2def5a 0%, #176025 100%);
+    transition: 0.2s;
+}
+#yes_text{
+    font-size: 28px;
+    font-weight: bold;
+    color:#313333;
+    text-shadow: 0px 1px #7ff99c;
 }
 .no_button{
-    background-color: #FF5252;
+    background: -webkit-linear-gradient(top, #ff7272 0%, #dd1111 100%);
+    border: 3px solid #d63535;
+    border-radius: 8px;
     width: 150px;
     height: 50px;
     font-size: 30px;
-    border-radius: 8px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 .no_button:hover{
-    background-color: #ff1e1e;
+     background: -webkit-linear-gradient(top, #ff7272 0%, #ba0707 100%);
+    transition: 0.2s;
+}
+#no_text{
+    font-size: 28px;
+    font-weight: bold;
+    color:#313333;
+    text-shadow: 0px 1px #ff7c7c;
 }
 button{
     display: inline;
 }
+
 /* -- Here starts 90's --*/
 .mainComputer{
     height: 570px;
@@ -166,16 +198,18 @@ button{
 }
 .screen{
     background-color: #164f57;
-    height: 350px;
+    height: 310px;
+    width: 300px;
     border-radius: 10px;
     margin-top: 20px;
     overflow: hidden;
-    background-image: url("pictures/cara1.png");
+    background-image: url("/public/pictures/cara1.png");
     background-size: contain;
+    background-repeat: no-repeat;
 }
 .screen_img{
-    max-width:auto;
-    max-height:350px;
+    max-width:300px;
+    max-height:310px;
 	display:block;
     margin-left: auto;
     margin-right: auto;
@@ -189,6 +223,7 @@ button{
 }
 .final-req{
     margin-top: 10px;
+    padding-bottom: 10px;
     background-color: #FFE852;
     width: 50%;
     display: inline-block;
